--- a/src/assets/nav.sass
+++ b/src/assets/nav.sass
@@ -4,7 +4,6 @@
   width: $width
   border-radius: $borderRadius
 
-
 .logo
   height: 2rem
 
@@ -15,6 +14,7 @@
 
 .navDiv
   height: 3.5rem
+  background-color: #151515 !important
 
 .childNavs
   position: relative
@@ -26,7 +26,6 @@
 
 
 .parentText
-  color: #00e63c !important
   position: relative
   letter-spacing: 0.8px
 
