all designs created, home page ready(fetching using local state, not redux)

--- a/src/assets/_partial/_customDiv.sass
+++ b/src/assets/_partial/_customDiv.sass
@@ -5,3 +5,13 @@
   max-width: $width
   margin: $margin
   border-radius: $borderRadius
+
+
+.customScroll::-webkit-scrollbar
+    width: 5px
+
+.customScroll::-webkit-scrollbar-thumb
+  background: #ddd
+
+.customScroll::-webkit-scrollbar-track
+  background: #666
