--- a/src/assets/customBootstrap.sass
+++ b/src/assets/customBootstrap.sass
@@ -1,4 +1,4 @@
-$theme-colors: ( "info": teal, "danger": tomato)
+$theme-colors: ( "info": teal, "danger": #FF1400, "success": #0fe600, "dark":#191a1b)
 
 /* import bootstrap to set changes */
 @import "~bootstrap/scss/bootstrap"
