--- a/src/assets/imageCollage.sass
+++ b/src/assets/imageCollage.sass
@@ -47,8 +47,11 @@
   bottom: 0
   left: 0
   text-shadow: 2px 2px 3px rgba(0,0,0,1)
+  font-weight: 400!important
+  font-family: inherit
 
 .thumbnailTextTop
   @extend .thumbnailTextBottom
   top: 0
   padding-top: 0.2rem
+
