--- a/src/assets/nav.sass
+++ b/src/assets/nav.sass
@@ -14,10 +14,10 @@
 .childNavs
   position: relative
 
-
-.searchInput:focus
+#searchInput:focus
+  color: #fff
+  background-color: #191a1b
   border: 1px solid darkgrey
-  color: white
 
 .logo
   height: 2rem
@@ -42,7 +42,6 @@
   top: 2.5rem
   font-size: 0.8rem
   min-width: max-content
-
 
 .child1
   left: 1rem
