--- a/src/assets/nav.sass
+++ b/src/assets/nav.sass
@@ -25,11 +25,15 @@
   height: 2rem
 
 .avatarCircle
-  @include box(2rem,2rem,50%)
+  @include box(2.6rem,2.6rem,50%)
+  border: 2px solid #29313c
   cursor: pointer
+  font-size: 1.8rem
 
 .avatarCircleBig
   @include box(3rem,3rem,50%)
+  border: 2px solid darkgrey
+  font-size: 2rem
 
 .avatarDiv
   position: relative
