--- a/src/assets/nav.sass
+++ b/src/assets/nav.sass
@@ -6,7 +6,6 @@
   min-width: $width
   border-radius: $borderRadius
 
-
 .navDiv
   height: 3.5rem
   background-color: #151515 !important
@@ -20,6 +19,8 @@
   color: #fff
   background-color: #191a1b
   border: 1px solid darkgrey
+  outline: none
+  box-shadow: none
 
 .logo
   height: 2rem
