--- a/src/assets/actorDetails.sass
+++ b/src/assets/actorDetails.sass
@@ -3,19 +3,23 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
 
 #actorDetails
-  position: absolute
-  top: 10vh
-  bottom: 10vh
-  left: 10vw
+  position: relative
+  top: 4rem
+  z-index: 10
   height: max-content
   padding-bottom: 8rem
 
 .blueBox
-  height: 130px
+  height: 8rem
+  width: 100%
+  position: absolute
+  top: 0
+  z-index: 5
   background-color: #2c7a7b
 
 .poster
   width: 265px
+  max-width: 265px
   background-size: contain
   background-repeat: no-repeat
   border-radius: 3px
