--- a/src/assets/mediaCard.sass
+++ b/src/assets/mediaCard.sass
@@ -12,8 +12,9 @@ h3
   position: relative
   overflow: hidden
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2)
-  filter: brightness(65%)
+  filter: brightness(0.75)
   background-size: cover
+  transition: all 0.5s
 
 .mediaCard
   width: max-content
@@ -21,36 +22,6 @@ h3
   .data .content p
     font-size: 15px
     font-weight: 400
-
-  .menu-content
-    margin: 0
-    padding: 0
-    list-style-type: none
-
-    &::before
-      content: ''
-      display: table
-
-    &::after
-      content: ''
-      display: table
-      clear: both
-
-    li
-      display: inline-block
-
-    a
-      color: #fff
-
-    span
-      position: absolute
-      left: 50%
-      top: 0
-      font-size: 10px
-      font-weight: 700
-      font-family: 'Open Sans', sans-serif
-      -webkit-transform: translate(-50%, 0)
-      transform: translate(-50%, 0)
 
   .wrapper
     width: 205px
@@ -65,6 +36,10 @@ h3
       -webkit-transform: translateY(0)
       transform: translateY(0)
 
+    &:hover .background
+      filter: brightness(0.2)
+      transition: all 0.5s
+
   .data
     position: absolute
     bottom: 0
@@ -77,8 +52,9 @@ h3
       position: relative
       z-index: 1
 
-  .author
+  .date
     font-size: 12px
+    color: whitesmoke
 
   .title
     text-shadow: 2px 2px 4px #000000
@@ -96,52 +72,14 @@ h3
     margin:
       top: 1rem
 
-  /*      white-space: nowrap;
-   * overflow: hidden;
-   * text-overflow: ellipsis;
-
-  input[type='checkbox']
-    display: none
-
-    &:checked + .menu-content
-      -webkit-transform: translateY(-60px)
-      transform: translateY(-60px)
-
-.poster
+.posterCard
   position: relative
+  width: 205px
+  max-width: 205px
   .wrapper:hover .menu-content span
     -webkit-transform: translate(-50%, -10px)
     transform: translate(-50%, -10px)
     opacity: 1
-
-  .header
-    color: #fff
-    padding: 1rem
-
-    &::before
-      content: ''
-      display: table
-
-    &::after
-      content: ''
-      display: table
-      clear: both
-
-  .menu-content
-    float: right
-
-    li
-      margin: 0 5px
-      position: relative
-
-    span
-      -webkit-transition: all 0.3s
-      transition: all 0.3s
-      opacity: 0
-
-  .data
-    filter: none
-    color: #fff
 
   .title a
     color: #fff
@@ -157,22 +95,10 @@ h3
     position: relative
     font-weight: 700
 
-    &::after
-      content: '\2192'
-      opacity: 0
-      position: absolute
-      right: 0
-      top: 5%
-      -webkit-transform: translate(0, -50%)
-      transform: translate(0, -50%)
-      -webkit-transition: all 0.3s
-      transition: all 0.3s
-
-    &:hover::after
-      -webkit-transform: translate(5px, -5%)
-      transform: translate(5px, -5%)
-      opacity: 1
 
 .shiftVertically
   -webkit-transform: translateY(calc(70px + 3.5rem))
   transform: translateY(calc(70px + 3.5rem))
+
+.ratingStyle:hover
+  transform: scale(1.1)
