search page created

--- a/src/assets/app.sass
+++ b/src/assets/app.sass
@@ -5,3 +5,14 @@
 .main
   max-width: 1366px
   margin: auto
+
+
+a
+  text-decoration: none
+  outline: none
+a:hover
+  @extend  a
+Link
+  @extend  a
+Link:hover
+  @extend  a
