--- a/src/assets/customBootstrap.sass
+++ b/src/assets/customBootstrap.sass
@@ -32,3 +32,13 @@ $lightGrey: #d4d4d4
 .btn-sm:hover
   @extend .btn:hover
 
+a
+  text-decoration: none
+  outline: none
+a:hover
+  @extend  a
+Link
+  @extend  a
+Link:hover
+  @extend  a
+
