--- a/src/assets/mediaSearch.sass
+++ b/src/assets/mediaSearch.sass
@@ -6,12 +6,6 @@
   background-color: #02131b
 
 
-
-
-
-
-
-
 //InvalidKeywords
 .InvalidKeywords
   height: 100vh
@@ -21,51 +15,42 @@
   font-size: 3rem
 
 
-
-
-
-
-
-
-
 //media
 .posterSize
   height: 19rem
   width: 13rem
+  border-radius: 0.25rem
+
 
 .posterDiv
-  box-shadow: -5px 5px 10px 0 rgba(0,0,0,0.75)
+  border-radius: 0.25rem
   background-size: cover
-  border-radius: 5px
-  position: absolute
-  right: -2rem
-  top: -2rem
-  @extend .smallThumbnail
-  @include boxSize(19rem,13rem)
+  @include boxSize(19rem, 13rem)
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1)
 
 .posterDiv:hover
-  @extend .smallThumbnail:hover
+  transform: scale(1.1)
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1)
 
-a
-  text-decoration: none
-
-
-
+.typeOf
+  letter-spacing: 1px
 
 
-
-
-
+.badge
+  font-size: 85%
 
 //searchMovieTvCard
 .movieTvDataSec
+  box-shadow: -5px 7px 10px 0 rgba(0, 0, 0, 0.75)
+  cursor: pointer
   position: absolute
-  right: 9.5rem
+  top: -2rem
+  right: -1rem
   width: 40rem
 
 .movieTvDataContainer
-  max-height: 15.8rem
   overflow: hidden
+  max-height: 14.7rem
 
 .movieTvDataTitle
   font-size: 1.6rem
@@ -75,6 +60,7 @@ a
 
 .overviewText
   font-size: 0.96rem
+  max-height: 6rem
 
 .MediaType
   max-width: 50rem
@@ -86,19 +72,14 @@ a
   background-color: #212529
 
 
-
-
-
-
-
-
 //searchActorCard
 
 
 .actorDataSec
-  position: absolute
-  left: 11.5rem
-  width: 40rem
+  left: -1rem
+  right: auto
+  box-shadow: 5px 7px 10px 0 rgba(0, 0, 0, 0.75)
+  @extend .movieTvDataSec
 
 .knownFor
   font-size: 0.9rem
@@ -106,13 +87,20 @@ a
 .smallPoster
   background-size: cover
   border-radius: 2px
-  @extend .smallThumbnail
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1)
 
 .smallPoster:hover
-  transform: scale(1.1)
-  @extend .smallThumbnail:hover
+  z-index: 22
+  box-shadow: 0 3px 4px 3px rgba(0, 0, 0, 0.75)
+  transform: scale(1.3)
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1)
 
 .smallPosterImage
   height: 9rem
   width: 6rem
   border-radius: 2px
+
+.moreInfoMovieTv
+  position: absolute
+  bottom: 0.3rem
+  left: 1rem
