--- a/src/assets/nav.sass
+++ b/src/assets/nav.sass
@@ -1,4 +1,3 @@
-
 @mixin box($height,$width,$borderRadius:0)
   height: $height
   width: $width
@@ -8,16 +7,16 @@
 
 .navDiv
   height: 3.5rem
-  background-color: #151515 !important
+  background-color: rgba(21, 21, 21, 0.6) !important
   z-index: 20
-  box-shadow: 0 .5rem 1rem rgba(0,0,0,.3)!important
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .3) !important
 
 .childNavs
   position: relative
 
 #searchInput:focus
   color: #fff
-  background-color: #191a1b
+  background-color: transparent
   border: 1px solid darkgrey
   outline: none
   box-shadow: none
@@ -26,13 +25,13 @@
   height: 2rem
 
 .avatarCircle
-  @include box(2.6rem,2.6rem,50%)
+  @include box(2.6rem, 2.6rem, 50%)
   border: 2px solid #29313c
   cursor: pointer
   font-size: 1.4rem
 
 .avatarCircleBig
-  @include box(3rem,3rem,50%)
+  @include box(3rem, 3rem, 50%)
   border: 2px solid darkgrey
   font-size: 1.7rem
 
