media keywords,external links,recommended,similar,video modal added to mediaDetails page,site scrollbar changed

--- a/src/assets/index.sass
+++ b/src/assets/index.sass
@@ -1,9 +1,19 @@
 body
   margin: 0
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',sans-serif
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
+
+body::-webkit-scrollbar
+  width: 0.8rem
+
+body::-webkit-scrollbar-thumb
+  background: #666
+  border-radius: 0.1rem
+
+body::-webkit-scrollbar-track
+  background: rgb(34, 34, 34)
 
 
 code
