--- a/src/assets/nav.sass
+++ b/src/assets/nav.sass
@@ -7,7 +7,7 @@
 
 .navDiv
   height: 3.5rem
-  background-color: rgba(21, 21, 21, 0.6) !important
+  background-color: rgb(15, 15, 15) !important
   z-index: 20
   box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .3) !important
 
