--- a/src/assets/mediaDetails.sass
+++ b/src/assets/mediaDetails.sass
@@ -55,6 +55,8 @@ p
   width: 40px
   height: 40px
   align-self: center
+  font-size: 1.55rem
+  box-shadow: 0 0 0.5rem 0 rgba(255, 255, 255, 0.1)
 
 
 .card-meta--title
@@ -100,7 +102,6 @@ p
   background-size: contain
   background-repeat: no-repeat
   position: relative
-  cursor: pointer
 
 
 .videoImage
@@ -126,7 +127,7 @@ p
   text-indent: 0.1em
   transition: all 150ms ease-out
 
-.videoThumbnail:hover .playButton
+.playButton:hover
   cursor: pointer
   background: $tiber
   box-shadow: none!important
@@ -164,6 +165,9 @@ p
 .videoModal
   background-color: rgba(4,15,22,0.5)
   max-width: 51rem
+
+.close:focus
+  outline: none
 //
 //
 //
