--- a/src/assets/customBootstrap.sass
+++ b/src/assets/customBootstrap.sass
@@ -1,4 +1,4 @@
-$theme-colors: ( "info": teal, "danger": #FF1400, "success": #0fe600, "dark":#191a1b)
+$theme-colors: ("info": teal, "danger": #FF1400, "success": #0fe600, "dark":#191a1b)
 $tiber: rgb(17, 38, 47)
 $cyprus: rgb(4, 15, 22)
 $lightGrey: #d4d4d4
@@ -20,25 +20,64 @@ $lightGrey: #d4d4d4
   color: $tiber
   border-radius: 0.2rem
 .list-group-item:hover
-  @extend  .list-group-item
+  @extend .list-group-item
 
+.btn
+  letter-spacing: 1px
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
 .btn:hover
   outline: none
   box-shadow: none
 .btn:focus
   @extend .btn:hover
-.btn-sm:hover
-  @extend .btn:hover
-.btn-sm:hover
-  @extend .btn:hover
+
+.btn-facebook
+  border: none!important
+  box-shadow: none!important
+  color: white
+  background-color: #3b5998
+.btn-facebook:hover
+  transform: translateY(-0.5rem)
+  @extend .btn-facebook
+
+.btn-insta
+  color: white
+  background-color: #cc2366
+  background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%)
+  background: -webkit-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%)
+  background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%)
+  @extend .btn-facebook
+.btn-insta:hover
+  @extend .btn-facebook:hover
+  @extend .btn-insta
+
+.btn-twitter
+  color: #00acee
+  background-color: #ebebeb
+  @extend .btn-facebook
+.btn-twitter:hover
+  @extend .btn-facebook:hover
+  @extend .btn-twitter
+
+.btn-imdb
+  color: black
+  background-color: #f3ce13
+  @extend .btn-facebook
+.btn-imdb:hover
+  @extend .btn-facebook:hover
+  @extend .btn-imdb
 
 a
   text-decoration: none
   outline: none
+  box-shadow: none
+
 a:hover
-  @extend  a
+  @extend a
+
 Link
-  @extend  a
+  @extend a
+
 Link:hover
-  @extend  a
+  @extend a
 
