--- a/src/assets/customBootstrap.sass
+++ b/src/assets/customBootstrap.sass
@@ -26,8 +26,8 @@ $lightGrey: #d4d4d4
   letter-spacing: 1px
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
 .btn:hover
-  outline: none
-  box-shadow: none
+  outline: none!important
+  box-shadow: none!important
 .btn:focus
   @extend .btn:hover
 
@@ -37,7 +37,7 @@ $lightGrey: #d4d4d4
   color: white
   background-color: #3b5998
 .btn-facebook:hover
-  transform: translateY(-0.5rem)
+  transform: translateY(-0.3rem)
   @extend .btn-facebook
 
 .btn-insta
