--- a/src/assets/logIn-signUp.sass
+++ b/src/assets/logIn-signUp.sass
@@ -1,10 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Gudea:400,700)
-//
-//.App
-//  background: #1fa2ff
-//  background: -webkit-linear-gradient(to right, #1fa2ff, #12d8fa, #1fa2ff)
-//  background: linear-gradient(to right, #1fa2ff, #12d8fa, #1fa2ff)
-
 
 #cardDisplay
   display: none
@@ -12,13 +6,13 @@
 
 .logIn-signUp
   min-height: 32rem
-  width: 24rem
+  min-width: 24rem
   max-height: 32rem
   max-width: 24rem
   background-color: #171921
   margin: auto
   position: absolute
-  top: 0
+  top: 5%
   bottom: 10%
   right: 0
   left: 0
@@ -30,7 +24,6 @@
 .mainLoginDiv
   position: relative
   transition: all 1s
-
 
 .mainLogo
   height: 4.5rem
@@ -45,6 +38,9 @@ input
   background-color: #007bff1a
   height: 3rem
 
+.loginSignUpButtons
+  position: relative
+
 a
   color: rgba(255, 255, 255, 0.5)
 
@@ -57,7 +53,7 @@ a
   box-shadow: 0 2px 3px 1px rgba(115, 115, 115, 0.35)
 
 .logInButtons
-  margin-top: 76px
+  margin-top: 0
 
 .validation
   width: 1rem
@@ -65,3 +61,18 @@ a
 .stylesPopOver
   background-color: #14141c
   opacity: 0.8
+
+.googleButton:hover
+  animation: rotate 2s infinite
+  animation-timing-function: cubic-bezier(0.3, 1, 0.2, 1)
+
+@keyframes rotate
+  from
+    transform: rotate(0deg)
+  to
+    transform: rotate(360deg)
+@-webkit-keyframes rotate
+  from
+    transform: rotate(0deg)
+  to
+    transform: rotate(360deg)
