--- a/src/assets/mediaDetails.sass
+++ b/src/assets/mediaDetails.sass
@@ -280,13 +280,14 @@ hr
   cursor: pointer
 
 .mediaListRelatedToMedia
-  height: 12.8rem
+  height: 15rem
+  width: auto
   border-radius: 0.4rem
   overflow: hidden
   background-color: #10252e!important
 
 .mediaListRelatedToMediaDiv
-  height: 10.1rem
+  height: 12.3rem
   overflow-y: hidden
   overflow-x: hidden
 
@@ -306,18 +307,23 @@ hr
 
 .mediaListRelatedToMediaContainer
   position: relative
-  height: auto
   border-radius: 0.5rem
 
 .mediaListRelatedToMediaImage
-  height: 9.83rem
+  min-width: 21.63rem
+  height: 12.15rem
   @extend .mediaListRelatedToMediaContainer
 
 .mediaListRelatedToMediaTitle
   background-color: rgba(0,0,0,0.7)
-  width: 97.2%
   position: absolute
-  bottom: -4rem
+  bottom: 1rem
+
+.relatedMediaRating
+  position: absolute
+  width: 3rem
+  top: -0.3rem
+  right: -0.4rem
 
 Link
   outline: none
