login-signup page input animation added

--- a/src/assets/logIn-signUp.sass
+++ b/src/assets/logIn-signUp.sass
@@ -34,6 +34,13 @@ input
   outline: none
   caret-color: #1fa2ff
 
+.inputTextDiv
+  padding-left: 1.2rem!important
+  transition: 0.4s!important
+.inputTextDiv:focus
+  padding-left: 0.5rem!important
+  transition: 0.4s!important
+
 .login_fields
   background-color: #007bff1a
   height: 3rem
