firebase Oauth access issue fixed,reset password feature added,redux auth reducer state object restructured,animations to login-signup page added

--- a/src/assets/customBootstrap.sass
+++ b/src/assets/customBootstrap.sass
@@ -31,6 +31,10 @@ $lightGrey: #d4d4d4
 .btn:focus
   @extend .btn:hover
 
+.btn-outline-light:hover
+  color: initial!important
+.btn-outline-light:active
+  color: #f6f7f8!important
 .btn-facebook
   border: none!important
   box-shadow: none!important
