login-signup signup tab animations,checkanimationIcon animations improved

--- a/src/assets/checkAnimationIcon.sass
+++ b/src/assets/checkAnimationIcon.sass
@@ -16,18 +16,20 @@
   opacity: 0.2
 
 #completion
-  animation: scale 1500ms ease-in-out
-  animation-delay: 500ms
-  opacity: 0
+  animation: scale 2500ms ease-in-out
+  opacity: 1
 
 @keyframes scale
   0%
     transform: scale(0.01)
-    opacity: 1
+    opacity: 0
   40%
+    transform: scale(0.01)
+    opacity: 1
+  60%
     transform: scale(1.14)
     opacity: 1
-  75%
+  85%
     transform: scale(0.9)
     opacity: 1
   100%
